frontend/src/pages/Scraper.css
.scraper-wrapper {
    display: flex;
    height: 100vh;
    align-items: center;
    flex-direction: column;
}

.arrows {
    width: 35px;
    height: 35px;
    cursor: pointer;
}

.top {
    box-shadow: 5px 10px 30px rgba(0, 247, 255, 0.157);
    background-color: #eeecec;
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 30px;
}

.top .top__title {
    text-align: center;
    margin-left: 150px;
}

.top .top__alter {
    display: flex;
    gap: 10px;
}

.mid {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 80%;
    gap: 20px;
    margin: 30px;
}

.mid .mid__left {
    height: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-around;
}

.mid .mid__right {
    width: 100%;
    height: 100%;
}

.mid .mid__right .mid__right__box {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    border-radius: 10px;
    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(190, 190, 190),
        0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
    padding: 30px;
    transition: all 0.3s ease-in-out;
}

.mid .mid__right .mid__right__box:hover {
    box-shadow: inset 0 -3em 3em rgba(0, 201, 252, 0.1),
        0 0 0 2px rgb(162, 209, 209), 0.3em 0.3em 1em rgba(0, 247, 255, 0.157);
}

.mid .mid__right .mid__right__box .news-date {
    width: 100%;
    display: flex;
    justify-content: flex-end;
    margin: 20px;
}

.news-desc {
    text-align: justify;
}

.news-summary {
    overflow-y: scroll;
    text-overflow: ellipsis;
    height: 250px;
}

.news-source {
    margin: 30px;
}

.bottom {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    margin-top: 25px;
}

